--- a/lib/package.json
+++ b/lib/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "angular": "^1.5.7",
+    "angular": "1.5.9",
     "angular-route": "^1.5.7",
     "angular-sanitize": "^1.5.7",
     "angularfire": "^2.0.1",
